// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency currency format with commas 1`] = `
<span
  className="Text__P-sc-3suny7-0-span jSPpgI"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  $
  42
</span>
`;

exports[`Currency currency format with commas 2`] = `
<span
  className="Text__P-sc-3suny7-0-span jSPpgI"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  $
  19,000
</span>
`;

exports[`Currency renders default options 1`] = `
<span
  className="Text__P-sc-3suny7-0-span jSPpgI"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  $42
</span>
`;

exports[`Currency renders default options 2`] = `
<span
  className="Text__P-sc-3suny7-0-span jSPpgI"
  fontSize="inherit"
  letterSpacing="-0.4px"
>
  $19,000
</span>
`;
